[tool.poetry]
name = "social-democracy-network"
version = "0.1.0"
description = "Social Democracy Network"
authors = ["Doug <drowlands02@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

flask = ">=3.1.1,<4.0.0"
flask-sqlalchemy = ">=3.1.1,<4.0.0"
flask-migrate = ">=4.1.0,<5.0.0"
requests = ">=2.32.3,<3.0.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
gunicorn = ">=23.0.0,<24.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
flask-mail = "^0.10.0"
flask-login = "^0.6.3"
python-dotenv = "^1.1.0"
waitress = "^3.0.2"
watchdog = "^6.0.0"
pytz = "^2025.2"
python-dateutil = "^2.9.0.post0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
